--- a/Day_50/next-auth/src/app/profile/profile.scss
+++ b/Day_50/next-auth/src/app/profile/profile.scss
@@ -59,6 +59,25 @@
                             margin-right: 10px;
                         }
                     }
+
+                    .google-user,
+                    .github-user {
+                        display: flex;
+                        column-gap: 10px;
+                        align-items: center;
+                        background-color: darkcyan;
+                        color: #fff;
+                        font-weight: 600;
+                        padding: 8px 10px;
+                        border-radius: 6px;
+                        box-shadow: 0 0 4px 1px lightblue;
+
+
+                        img {
+                            width: 30px;
+                            border-radius: 50%;
+                        }
+                    }
                 }
 
                 .rest {
