--- a/Day_56/Auth/views/index.ejs
+++ b/Day_56/Auth/views/index.ejs
@@ -7,3 +7,4 @@
         <h2 class="mt-4">Chào bạn: <%= req?.session?.userInfo?.name %>
         </h2>
         <a href="/logout" class="btn btn-danger mt-2">Đăng xuất</a>
+        <a href="/account" class="btn btn-success mt-2">Tài khoản</a>
