--- a/Day_56/Auth/views/account/index.ejs
+++ b/Day_56/Auth/views/account/index.ejs
@@ -29,5 +29,6 @@
         <div class="mt-4">
             <a href="/account/change-password" class="btn btn-warning">Đổi mật khẩu</a>
             <a href="/account/manage-device" class="btn btn-info">Quản lý thiết bị</a>
+            <a href="/contact" class="btn btn-success">Gửi Email</a>
             <a href="/" class="btn btn-danger">Về bờ</a>
         </div>
