--- a/Day_60/Google/views/layout.ejs
+++ b/Day_60/Google/views/layout.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>F8 - Học lập trình để đi làm</title>
+    <title>F8 - Học lập trình để đi nhậu</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css"
         integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -12,7 +12,25 @@
 
 <body>
     <main class="container py-3">
-        <%- body %>
+        <div class="row">
+            <div class="col-4">
+                <h2>Menu quản trị</h2>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="/" class="nav-link">Tổng quan</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/users" class="nav-link">Quản lý người dùng</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/roles" class="nav-link">Quản lý vai trò</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-8">
+                <%- body %>
+            </div>
+        </div>
     </main>
 </body>
 
