--- a/Day_60/Google/views/layout.ejs
+++ b/Day_60/Google/views/layout.ejs
@@ -25,6 +25,10 @@
                     <li class="nav-item">
                         <a href="/roles" class="nav-link">Quản lý vai trò</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="/banking" class="nav-link text-danger">Click ngay nhận quà liền
+                            tay</a>
+                    </li>
                 </ul>
             </div>
             <div class="col-8">
