--- a/Day_60/Google/views/index.ejs
+++ b/Day_60/Google/views/index.ejs
@@ -1,4 +1,4 @@
-<h1>F8 - Học lập trình để đi nhậu</h1>
+<h1>Hi I'm Huy. This is my small project about decentralization, manage devices and shorten links</h1>
 
 <ul class="d-flex gap-2 list-unstyled">
   <li>Hello: <%= req.user.name %>
