--- a/Day_60/Google/views/layout.ejs
+++ b/Day_60/Google/views/layout.ejs
@@ -13,25 +13,35 @@
 <body>
     <main class="container py-3">
         <div class="row">
-            <div class="col-4">
+            <div class="col-3">
                 <h2>Menu quản trị</h2>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a href="/" class="nav-link">Tổng quan</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="/users" class="nav-link">Quản lý người dùng</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/roles" class="nav-link">Quản lý vai trò</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/banking" class="nav-link text-danger">Click ngay nhận quà liền
-                            tay</a>
-                    </li>
+                    <% if (req.user.validate("users.watch")) { %>
+                        <li class="nav-item">
+                            <a href="/users" class="nav-link">Quản lý người dùng</a>
+                        </li>
+                        <% } %>
+                            <% if (req.user.validate("roles.watch")) { %>
+                                <li class="nav-item">
+                                    <a href="/roles" class="nav-link">Quản lý vai trò</a>
+                                </li>
+                                <% } %>
+                                    <li class="nav-item">
+                                        <a href="/banking" class="nav-link text-danger">Click ngay nhận quà liền
+                                            tay</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/links" class="nav-link">Rút gọn liên kết</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/links/manage" class="nav-link">Quản lý liên kết</a>
+                                    </li>
                 </ul>
             </div>
-            <div class="col-8">
+            <div class="col-9">
                 <%- body %>
             </div>
         </div>
